Fix alignment commans menu

--- a/src/pages-commands/menu/menu.component.scss
+++ b/src/pages-commands/menu/menu.component.scss
@@ -16,6 +16,7 @@
   gap: 20px;
   list-style: none;
   margin-top: 50px;
+  padding: 0;
 
   .command-link a {
     text-decoration: none;
